--- a/templates/bacula-dir.conf.erb
+++ b/templates/bacula-dir.conf.erb
@@ -22,13 +22,15 @@ Director {                            # define myself
   WorkingDirectory = "/opt/bacula/working"
   PidDirectory = "/opt/bacula/working"
   Maximum Concurrent Jobs = <%= node['bacula']['dir']['max_concurrent_jobs'] %>
-  Password = "gbphErHVM/DPohIC+GhqjlsAShPokZ7gp7uMP1oHTCiX"         # Console password
+  Password = "gbphErHVM/DPohIC+GhqjlsAShPokZ7gp7uMP1oHTCiX"
   Messages = Daemon
+  DirAddress = <%= node['bacula']['dir']['address'] %>
 }
 
 JobDefs {
   Name = "DefaultJob"
   Type = Backup
+  Client = <%= node['fqdn'] %>-fd
   Level = Incremental
   FileSet = "Full Set"
   Schedule = "WeeklyCycle"
@@ -111,7 +113,7 @@ FileSet {
 #  Put your list of files here, preceded by 'File =', one per line
 #    or include an external list with:
 #
-#    File = <file-name
+#    File = <file-name>
 #
 #  Note: / backs up everything on the root partition.
 #    if you have other partitions such as /usr or /home
@@ -238,7 +240,7 @@ Autochanger {
 # Generic catalog service
 Catalog {
   Name = MyCatalog
-  dbname = "bacula"; dbuser = "bacula"; dbpassword = ""
+  dbname = "bacula"; dbuser = "bacula"; dbpassword = "bacula"
 }
 
 # Reasonable message delivery -- send most everything to email address
