- Move the attributes to the default.rb file instead of having them     split up into mulitple attributes files   - Create the template for the storage daemon config file   - Add storage resource named File to the bacula-dir.conf template   - Bump version to 0.1.1
On branch configure-sd
Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   .kitchen.yml
	modified:   attributes/default.rb
	modified:   attributes/director.rb
	new file:   recipes/storage.rb
	new file:   spec/unit/recipes/storage_spec.rb
	modified:   templates/bacula-dir.conf.erb
	new file:   templates/bacula-sd.conf.erb
	new file:   test/smoke/default/storage_test.rb

--- a/templates/bacula-dir.conf.erb
+++ b/templates/bacula-dir.conf.erb
@@ -194,6 +194,14 @@ Client {
 #  AutoPrune = yes                    # Prune expired Jobs/Files
 #}
 
+Storage {
+  Name = File
+  Address = <%= node['ipaddress'] %>
+  SDPort = 9103
+  Password = "YM4CFm4q15xzLGDq0bJ/DYjl94PyOI2JsPgnILoeADq/"
+  Device = Autochanger
+  Media Type = File
+}
 
 # Definition of file Virtual Autochanger device
 Autochanger {
